vlib/v/checker/tests/string_interpolation_invalid_fmt.vv
fn interpolate_wrong() string {
	a := 5
	x := '${a:xy}'
	return x
}
